src/styles/endscreen.css
@CHARSET "UTF-8";

.h5p-interactive-video-endscreen {
  --h5p-theme-scale: 0.6;
  --h5p-theme-spacing-xl: calc(3em * var(--h5p-theme-scale));
  --h5p-theme-spacing-l: calc(2em * var(--h5p-theme-scale));
  --h5p-theme-spacing-m: calc(1.5em * var(--h5p-theme-scale));
  --h5p-theme-spacing-s: calc(1em * var(--h5p-theme-scale));
  --h5p-theme-spacing-xs: calc(0.65em * var(--h5p-theme-scale));
  --h5p-theme-spacing-xxs: calc(0.5em * var(--h5p-theme-scale));
  --h5p-theme-font-size-xxl: 1.5em;
  --h5p-theme-font-size-xl: 1.25em;
  --h5p-theme-font-size-l: 1.125em;
  --h5p-theme-font-size-m: 1em;
  --h5p-theme-font-size-s: 0.85em;

  font-size: .75em;

  max-height: 100%;
  /* Special treatment for iOS devices */
  -webkit-text-size-adjust: none;
}

.h5p-interactive-video-endscreen .h5p-theme-result-screen .h5p-theme-results-list-item,
.h5p-interactive-video-endscreen .h5p-theme-result-screen .h5p-theme-results-list-heading {
  line-height: 1.5em;
}

.h5p-interactive-video-endscreen .h5p-theme-results-question {
  display: flex;
  gap: var(--h5p-theme-spacing-s);
}

.h5p-interactive-video .h5p-interactive-video-endscreen {
  overflow-y: hidden;
}

.h5p-interactive-video-endscreen .h5p-theme-result-screen {
  display: grid;
  grid-template-rows: auto 1fr auto;
  height: var(--bubble-height);
}

.h5p-interactive-video-endscreen.h5p-interactive-video-endscreen-active {
  opacity: 1;
}

.h5p-interactive-video-endscreen.h5p-interactive-video-endscreen-inactive {
  opacity: 0;
}

.h5p-theme .h5p-interactive-video-endscreen button.h5p-theme-secondary-cta.h5p-theme-close {
  background-color: transparent;
  border-color: transparent;
  margin-right: calc(-1 * var(--h5p-theme-spacing-s));
  margin-top: calc(-1 * var(--h5p-theme-spacing-xs));
}

.h5p-interactive-video-endscreen button.h5p-theme-close:before {
  color: var(--h5p-theme-contrast-cta-white);
  content: "\e910"; /* cross icon */
  margin: 0;
  z-index: 0;
}

.h5p-interactive-video-endscreen-overview-table-row-time {
  color: var(--h5p-theme-contrast-cta-white);
  display: inline-block;
  font-size: var(--h5p-theme-font-size-m);
  width: var(--h5p-theme-endscreen-time-width, 7ch); /* fallback sufficent for h:mm:ss */
}

.h5p-interactive-video-endscreen-overview-table-row-title {
  width: 100%;
  text-align: left;
}

.h5p-interactive-video-endscreen-information {
  align-items: center;
  display: flex;
  gap: var(--h5p-theme-spacing-s);
  flex-direction: column;
  margin-inline: var(--h5p-theme-spacing-xl);
  margin-bottom: var(--h5p-theme-spacing-m);
}

.h5p-interactive-video-endscreen-information-text {
  color: var(--h5p-theme-text-third);
  font-size: var(--h5p-theme-font-size-s);
  line-height: 1.5em;
  text-align: center;
}

.h5p-interactive-video-endscreen .h5p-theme-results-list-item {
  padding-inline: var(--h5p-theme-spacing-m);
}

.h5p-interactive-video-endscreen .h5p-theme-results-list-item.is-jump-button:not(.is-skipping-prevented) {
  cursor: pointer;
}

.h5p-interactive-video-endscreen .h5p-theme-results-list-item.is-jump-button:not(.is-skipping-prevented):hover,
.h5p-interactive-video-endscreen .h5p-theme-results-list-item.is-jump-button:focus-visible {
  background-color: var(--h5p-theme-contrast-cta-light);
}

.h5p-interactive-video-endscreen .h5p-theme-result-screen.no-questions-answered .h5p-theme-results-list-container {
  display: none;
}

.h5p-interactive-video-endscreen .h5p-theme-result-screen.no-questions-answered .h5p-theme-results-banner {
  margin-bottom: var(--h5p-theme-spacing-m);
}

